Mise au point pour publication

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 
     <meta charset="utf-8">
-    <title>Tutoriel Markdown - Référence</title>
+    <title>Tutoriel Markdown FR</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
@@ -12,6 +12,12 @@
     <link rel="stylesheet" href="css/normalize-skeleton.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" type="image/png" href="images/favicon.png">
+	<meta name="twitter:card" content="summary_large_image">
+	<meta name="twitter:site" content="@artorig.github.io/tutomd/">
+	<meta name="twitter:creator" content="@arthurperret">
+	<meta name="twitter:title" content="Tutoriel Markdown FR">
+	<meta name="twitter:description" content="Traduction française du tutoriel Markdown de CommonMark.">
+	<meta name="twitter:image" content="images/titleimage.png">
 
 </head>
 
@@ -21,7 +27,7 @@
         
         <div class="twelve columns">
             <p><b>Markdown</b> permet de structurer simplement et rapidement du texte pour un rendu efficace sur n'importe quel écran. C'est un langage simple qui se concentre sur l'essentiel, en utilisant des symboles que vous connaissez déjà.</p>
-            <p>Ce mini-site est une traduction française des pages d'aide <a href="https://spec.commonmark.org">du site de CommonMark</a>, proposée par Arthur Perret (janvier 2020).</p>
+            <p>Ce mini-site est une traduction française des pages d'aide <a href="https://commonmark.org">du site de CommonMark</a>.</p>
         </div>
 
         <div class="twelve columns center">
@@ -214,6 +220,7 @@
         <div class="twelve columns">
             <p><b>Plus d'infos ?</b></p>
             <p>Visitez <a href="https://spec.commonmark.org">la spécification officielle CommonMark</a>, ou <a href="https://talk.commonmark.org">discutez de CommonMark avec la communauté</a>.</p>
+            <p class="muted">Traduction française : Arthur Perret (janvier 2020)</p>
         </div>
 
     </div>
